--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://theakiraxd.github.io'
 
 author: your_full_name                  # change to your full name
 
@@ -71,7 +71,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode:   # [light|dark]
+theme_mode:  dark
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
