post #2 and small adjustments in the 3D model canvas container

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >-                        # used by seo meta and the atom feed
   A personal blog to display some of my work with coding, 3D modeling, etc.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://theakiraxd.github.io/'
 
 author: Maico W. S. Santos                 # change to your full name
 
